--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     <div id="bcsmall">
       <p><i class="fa fa-fw fa-envelope"></i> <a href="mailto:info@balancedchores.com">info@balancedchores.com</a></p>
-      <p><i class="fa fa-fw fa-bullhorn"></i> <a href="#mc_embed_signup">Subscribe for newsletter</a></p>
+      <p><i class="fa fa-fw fa-bullhorn"></i> <a href="#mc_embed_signup">Subscribe to newsletter</a></p>
     </div>
     
     <div id="bccontenttop">
@@ -97,7 +97,7 @@
 <div id="mc_embed_signup">
 <form action="//balancedchores.us9.list-manage.com/subscribe/post?u=7f359fbeb6d51d510e195730d&amp;id=13528ea74b" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
     <div id="mc_embed_signup_scroll">
-        <p>Subscribe for a low frequency
+        <p>Subscribe to a low frequency
           newsletter and be first to <b>get invitation to the early
           access version of Balanced Chores</b>, which is planned to
           be released in late 2015.
